# nivara

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  InvestIQ_PRD_v1.2.docx  InvestIQ_PRD_v1.2.md  InvestIQ_TechSpec_v1.2.md  README.md  alembic.ini  docker-compose.yml  implementation.md  manage.py  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml
.supervisor/: state.md
.supervisor/logs/: .notify-debounce
.supervisor/worker-summaries/: M4-21-5.md  M4-21-subtask-1.md  M4-21-subtask-3.md  M4-21-subtask-4.md  M4-22-S1.md  M4-22-S2.md  M4-22-S3.md  M4-22-S4.md  M4-22-S5.md  M4-22-heal-iter1.md  M4-23-S1.md  M4-23-S2.md  M4-23-S3.md  M4-23-S4.md  M4-23-S5.md  M4-23-S6.md  M4-23-heal-iter1.md  m3-19-safety-fixes.md
backend/: Dockerfile
backend/alembic/: README.md  env.py
backend/app/: celery_app.py  config.py  db.py  main.py  redis_client.py
backend/tests/: conftest.py  test_ai_analysis.py  test_auth.py  test_benchmark_service.py  test_broker_conformance.py  test_broker_oauth.py  test_calendar.py  test_corporate_actions.py  test_data_provider.py  test_edgar.py  test_encryption.py  test_fred.py  (+32 more)
mobile/: .eslintrc.js  README.md  app.json  jest.config.js  jest.setup.js  metro.config.js  package-lock.json  package.json  tsconfig.json
plan/: InvestIQ_PRD.docx  InvestIQ_PRD.md  InvestIQ_PRD_v1.1.docx  InvestIQ_PRD_v1.2.md  InvestIQ_TechSpec.docx  InvestIQ_TechSpec.md  InvestIQ_TechSpec_v1.1.docx  InvestIQ_TechSpec_v1.2.docx  InvestIQ_TechSpec_v1.2.md  implementation.md
scripts/: generate_keys.sh
(+239 files in other folders)
